# cipher_chen_cindy

./: CONTRIBUTING.md  pyproject.toml
cipher__cjc2279/: CONTRIBUTING.rst  README.md
cipher__cjc2279/cipher_cjc2279/: cipher.py
cipher__cjc2279/docs/: Makefile  installation.rst  make.bat
cipher__cjc2279/tests/: test_cipher_cjc2279.py
cipher_cjc2279/: CHANGELOG.md  README.md  pyproject.toml
cipher_cjc2279/docs/: Makefile  conf.py  example.ipynb  make.bat
cipher_cjc2279/src/cipher_cjc2279/: __init__.py
cipher_cjc2279/tests/: test_cipher_cjc2279.py
src/cipher_cjc2279/: __init__.py
testingcipher/: LICENSE  pyproject.toml
testingcipher/docs/: conf.py  index.rst  usage.rst
testingcipher/tests/: test_cipher_function.py  test_testingcipher.py
