[tool.poetry]
name = "cipher-cjc2279"
version = "0.1.0"
description = "Cipher package"
authors = ["Cindy Chen"]
license = "MIT"
readme = "README.md"
packages = [{include = "cipher_cjc2279"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
pytest = "^7.2.0"
Sphinx = "^5.3.0"


[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
